# android-rtmp-app

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rtmp/androidapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  log4c.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/rtmp/androidapp/: CameraHelper.kt  CameraXHelper.kt  KotlinKT.kt  MainActivity.kt  PushHelper.kt  VideoChannel.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/rtmp/androidapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
